# esp32-quake-p2

./: .gitignore  README.md  sdkconfig
components/quakegeneric/quakegeneric/source/: net_udp.c  quakegeneric.h
main/: CMakeLists.txt  audio.c  control.c  control.h  display.c  hwcfg.h  input.c  main.c  timing.c  timing.h
